[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-http-launcher"
version = "0.3.0"
description = "Launch, supervise, and reconnect to long-running HTTP services locally or over SSH, with optional tunneling."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Sjoerd de Vries"}]
dependencies = [
    "PyYAML>=5.4",
]
keywords = ["ssh", "tunnel", "http", "service", "launcher", "process-manager", "remote", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/sjdv1982/remote-http-launcher"

[project.scripts]
remote-http-launcher  = "remote_http_launcher:main"
rhl-guard             = "ssh_guard.guard:main"
rhl-cache-conda       = "ssh_guard.helpers.cache_conda:main"
rhl-kill-service      = "ssh_guard.helpers.kill_service:main"
rhl-rm-state          = "ssh_guard.helpers.rm_state:main"
rhl-cat-log           = "ssh_guard.helpers.cat_log:main"
rhl-cat-json          = "ssh_guard.helpers.cat_json:main"
rhl-ls-services       = "ssh_guard.helpers.ls_services:main"
rhl-restart-cluster   = "ssh_guard.helpers.restart_cluster:main"
rhl-clear-buffer      = "ssh_guard.helpers.clear_buffer:main"
rhl-clear-db          = "ssh_guard.helpers.clear_db:main"

[tool.setuptools]
py-modules = ["remote_http_launcher"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ssh_guard*"]

[tool.setuptools.package-data]
ssh_guard = ["tools.yaml"]
